samples/_failures_safe/1761345318_70d5fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9f13012.c: In function ‘main’:
./samples/SAFE/__tmp_e9f13012.c:166:15: error: expected ‘;’ at end of input
  166 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_e9f13012.c:166:9: error: expected declaration or statement at end of input
  166 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_e9f13012.c:166:9: error: expected declaration or statement at end of input
